# alchemy

./: .gitignore  crud.py  engine.py  mian.py  models.py  pyproject.toml  singular.db
