[project]
name = "alchemy"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmedik",email = "isa732827@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
